multicluster_user_guides/CIS HA/routes/route-coffee-edge.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    virtual-server.f5.com/multiClusterServices: '[{"clusterName": "cluster3", "service":
          "coffee-svc", "namespace": "cafeone", "servicePort": 8080 }]'
    # you can define either service port or target port in the port value
  labels:
    f5type: systest
  name: cafe-coffee-edge
  namespace: cafeone
spec:
  host: cafeone.example.com
  path: "/coffee"
  port:
    targetPort: 8080
  to:
    kind: Service
    name: coffee-svc
